kubernetes-networks/canary/web-canary-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-canary
  template:
    metadata:
      name: web
      labels:
        app: web-canary
    spec:
      containers:
      - name: web
        image: stitrace/nginx-kubernates-intro:0.0.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: app
          mountPath: /var/www/localhost/htdocs
      volumes:
      - name: app
        emptyDir: {}
      serviceAccount: default
