kubernetes-networks/canary/web-stable-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-stable
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-stable
  template:
    metadata:
      name: web
      labels:
        app: web-stable
    spec:
      containers:
      - name: web
        image: stitrace/nginx-kubernates-intro:0.0.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: app
          mountPath: /var/www/localhost/htdocs
      volumes:
      - name: app
        emptyDir: {}
      serviceAccount: default
