kubernetes-networks/canary/web-canary-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-canary
  namespace: canary
spec:
  selector:
    app: web-canary
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
