kubernetes-networks/canary/web-stable-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-stable
  namespace: canary
spec:
  selector:
    app: web-stable
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
