kubernetes-networks/canary/web-canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-canary
  namespace: canary
  annotations:
    nginx.ingress.kubernates.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary-Release"
spec:
  backend:
    serviceName: web-canary
    servicePort: 80
  rules:
  - host: example.com
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         serviceName: web-canary
         servicePort: 80
