kubernetes-networks/canary/web-stable-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-stable
  namespace: canary
  annotations:
    nginx.ingress.kubernates.io/rewrite-target: /
spec:
  backend:
    serviceName: web-stable
    servicePort: 80
  rules:
  - host: example.com
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         serviceName: web-stable
         servicePort: 80
